visibility fix

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -322,9 +322,10 @@
   z-index: 3;
   left: 0;
   top: var(--header-height);
+  visibility: hidden;
   opacity: 0;
   animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: opacity 250ms;
+  transition: visibility 250ms, opacity 250ms;
 
   &.navigation__overlay--mac {
     top: calc(var(--header-height) + var(--mac-titlebar-height));
@@ -334,6 +335,7 @@
 .navigation__overlay--active {
   opacity: 1;
   animation: fadeInFromNone 250ms ease-out;
+  visibility: visible;
 }
 
 .navigation__auth-nudge {
